MODUSERS-536: Fix failing unit tests